@@ -1,3 +1,8 @@
+2012-03-10  David Edmondson  <dme@dme.org>
+
+	* mm-uu.el (mm-uu-forward-extract): Allow for blank lines between the
+	'Forwarded Message' header and the start of the message.
+
 2012-03-04  Thierry Volpiatto  <thierry.volpiatto@gmail.com>
 
 	* gnus-msg.el (gnus-msg-mail): Call `message-mail' correctly when Gnus
